# app/Http/Controllers/Api/v1/Categories/ShowController.php
@@ -4,7 +4,7 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers\Api\v1\Categories;
 
-use App\Http\Resources\v1\Category\IndexResource;
+use App\Http\Resources\v1\Category\ShowResource;
 use App\Queries\Category\ShowQuery;
 
 final readonly class ShowController
@@ -17,8 +17,8 @@ final readonly class ShowController
     /**
      * Display the specified category.
      */
-    public function __invoke(string $slug): IndexResource
+    public function __invoke(string $slug): ShowResource
     {
-        return new IndexResource($this->query->builder($slug)->firstOrFail());
+        return new ShowResource($this->query->builder($slug)->firstOrFail());
     }
 }
